--- a/rangedatepicker/src/main/res/drawable/state_selected.xml
+++ b/rangedatepicker/src/main/res/drawable/state_selected.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
   <item>
     <shape android:shape="oval">
-      <solid android:color="#ffcf40" />
+      <solid android:color="#D74485" />
       <stroke android:width="16dp"
           android:color="@android:color/transparent"/>
     </shape>
