--- a/rangedatepicker/src/main/res/drawable/state_range_middle.xml
+++ b/rangedatepicker/src/main/res/drawable/state_range_middle.xml
@@ -4,7 +4,7 @@
     android:viewportHeight="48"
     android:viewportWidth="48">
     <path
-        android:fillColor="#ffcf40"
+        android:fillColor="#D74485"
         android:pathData="M 0,8h48v32h-50z"
         android:strokeColor="#00000000"
         android:strokeWidth="1" />
