--- a/rangedatepicker/src/main/res/values/styles.xml
+++ b/rangedatepicker/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
   <style name="CalendarCell">
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_weight">1</item>
+    <item name="android:padding">16dp</item>
     <item name="android:gravity">center</item>
     <item name="android:textAlignment" tools:targetApi="jelly_bean_mr1">center</item>
   </style>
