--- a/rangedatepicker/src/main/res/values/colors.xml
+++ b/rangedatepicker/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
   <color name="calendar_bg">#ffffff</color>
   <color name="calendar_divider">#f5f5f5</color>
   <color name="calendar_inactive_month_bg">#ffffff</color>
-  <color name="calendar_selected_day_bg">#D74485</color>
+  <color name="calendar_selected_day_bg">#719a41</color>
   <color name="calendar_highlighted_day_bg">#D74485</color>
   <color name="calendar_selected_range_bg">#D74485</color>
   <color name="calendar_text_inactive">#ffffff</color>
@@ -16,7 +16,7 @@
   <color name="state_deactivated">#7ffefeff</color>
   <color name="dateTimeRangePickerStateDefault">@android:color/black</color>
   <color name="dateTimeRangePickerStateNonSelectable">@android:color/white</color>
-  <color name="dateTimeRangePickerStateToday">#D74485</color>
+  <color name="dateTimeRangePickerStateToday">#719a41</color>
   <color name="dateTimeRangePickerHeaderTextColor">@android:color/black</color>
   <color name="dateTimeRangePickerTitleTextColor">@android:color/black</color>
   <color name="dateTimeRangePickerRangeTextColorActive">@android:color/white</color>
