--- a/rangedatepicker/src/main/res/values/colors.xml
+++ b/rangedatepicker/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
   <color name="calendar_text_unselected">#7ffefeff</color>
   <color name="calendar_text_highlighted">#f5f5f5</color>
   <color name="colorAccent">#D74485</color>
-  <color name="color_red">#ef5350</color>
+  <color name="color_red">#D74485</color>
   <color name="state_deactivated">#7ffefeff</color>
   <color name="dateTimeRangePickerStateDefault">@android:color/black</color>
   <color name="dateTimeRangePickerStateNonSelectable">@android:color/white</color>
