--- a/rangedatepicker/src/main/res/values/dimens.xml
+++ b/rangedatepicker/src/main/res/values/dimens.xml
@@ -1,8 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <dimen name="calendar_day_headers_paddingbottom">4dp</dimen>
-  <dimen name="calendar_month_topmargin">16dp</dimen>
-  <dimen name="calendar_month_title_bottommargin">4dp</dimen>
-  <dimen name="calendar_text_medium">18sp</dimen>
-  <dimen name="calendar_text_large">20sp</dimen>
-  <dimen name="calendar_text_small">14sp</dimen>
+    <dimen name="calendar_day_headers_paddingbottom">4dp</dimen>
+    <dimen name="calendar_month_topmargin">12dp</dimen>
+    <dimen name="calendar_month_title_bottommargin">4dp</dimen>
+    <dimen name="calendar_text_large">14sp</dimen>
+    <dimen name="calendar_text_medium">12sp</dimen>
+    <dimen name="calendar_text_small">10sp</dimen>
 </resources>
