--- a/rangedatepicker/src/main/res/values/colors.xml
+++ b/rangedatepicker/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
   <color name="state_deactivated">#7ffefeff</color>
   <color name="dateTimeRangePickerStateDefault">@android:color/black</color>
   <color name="dateTimeRangePickerStateNonSelectable">@android:color/white</color>
-  <color name="dateTimeRangePickerStateToday">#719a41</color>
+  <color name="dateTimeRangePickerStateToday">@android:color/black</color>
   <color name="dateTimeRangePickerHeaderTextColor">@android:color/black</color>
   <color name="dateTimeRangePickerTitleTextColor">@android:color/black</color>
   <color name="dateTimeRangePickerRangeTextColorActive">@android:color/white</color>
